--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
   },
   "dependencies": {
     "express": "4.17.1",
+    "express-async-handler": "^1.1.4",
     "http-status-codes": "^1.3.2"
   }
 }
